--- a/package.json
+++ b/package.json
@@ -30,5 +30,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mkalluri92/corona_cases_worldwide.git"
+  },
+  "author": "Mounika Kalluri",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Mkalluri92/corona_cases_worldwide/issues"
+  },
+  "homepage": "https://github.com/Mkalluri92/corona_cases_worldwide#readme"
 }
